--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
                 </div>
             </section>
             -->
-            <section class="sec_four">
+            <section class="sec_tracos_curt">
+                <div class="div_traco_curt"></div>
+                <div class="div_traco_curt"></div>
+                <div class="div_traco_curt"></div>
+            </section>
+            <section class="sec_guarantee">
                 <div class="imagem_guarantee">
                     <img src="/Imagens/img_top_guarantee.png" alt="60 Days Money Guarantee buy kerassentials" id="guar" width="200px">
                 </div>
@@ -92,16 +97,26 @@
                 <a href="https://thekerassentials.com/text.php?aff_id=1047659"
                 target="_self"><button>Order Now</button></a>
             </div>
-            <section class="sec_five">
-                <div class="stars">
-                    <p>Our customers say</p>
-                    <img src="/Imagens/stars.png" alt="img 5 stars" class="img_stars" width="150px">
-                    <p>Based on 14.576+ reviews!</p>
+            <section class="sec_reference"></section>
+                <div class="div_traco_ref">
+                </div>
+                <div class="div_ref_scien">
+                    <h3>Scientific references:</h3>
+                </div>
+                <div class="div_img_ref">
+                    <img src="/Imagens/reference.png" alt="reference buy kerassentials" id="img_ref" width="1000">
                 </div>
             </section>
-            <section>
-                
+            <section class="sec_stars">
+                <div class="div_traco_stars">
+                </div>
+                <div class="stars">
+                    <p>Our customers say</p>
+                    <img src="/Imagens/stars.png" alt="img 5 stars" class="img_stars get kerassentials" width="150px">
+                    <p>Based on <strong>14.576+ reviews!</strong></p>
+                </div>
             </section>
+            
         </div>
     </main>
     <footer>
