--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             </section>
             -->
             <section class="sec_tracos_curt">
-                <div class="div_traco_curt"></div>
-                <div class="div_traco_curt"></div>
-                <div class="div_traco_curt"></div>
+                <div class="div_tracos_curt"></div>
+                <div class="div_tracos_curt"></div>
+                <div class="div_tracos_curt"></div>
             </section>
             <section class="sec_guarantee">
                 <div class="imagem_guarantee">
@@ -108,13 +108,13 @@
                 </div>
             </section>
             <section class="sec_stars">
-                <div class="div_traco_stars">
-                </div>
+                <div class="div_traco_stars"></div>
                 <div class="stars">
                     <p>Our customers say</p>
                     <img src="/Imagens/stars.png" alt="img 5 stars" class="img_stars get kerassentials" width="150px">
                     <p>Based on <strong>14.576+ reviews!</strong></p>
                 </div>
+                <div class="div_traco_stars"></div>
             </section>
             
         </div>
