--- a/index.html
+++ b/index.html
@@ -129,22 +129,14 @@
                 </p>
             </div>
             <div class="div_footer_one">
-                <div class="div_one">
+                <div class="div_footer_a">
                     <h4><a href="https://thekerassentials.com//help/contact-us.php" target="_blank">CONTACT</a></h4>
-                </div>
-                <div>
                     <h4><a href="pages/terms.html" target="_self">TERMS OF USE</a></h4>
+                    <h4><a href="/pages/disclaimer.html" target="_self">DISCLAIMER</a></h4>                      
                 </div>
-                <div>
-                    <h4><a href="/pages/disclaimer.html" target="_self">DISCLAIMER</a></h4>
-                </div>
-                <div class="div_two">
+                <div class="div_footer_b">
                     <h4><a href="pages/privacy.html" target="_self">PRIVACY POLICY</a></h4>
-                </div>
-                <div>
                     <h4><a href="/pages/shipping.html" target="_self">SHIPPING POLICY</a></h4>
-                </div>
-                <div>
                     <h4><a href="/pages/return_policy.html" target="_self">REFUND POLICY</a></h4>
                 </div>
             </div>
