--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="descrição">
                     <div class="frase">
                         <div class="p_name">
-                            <h2>Unlock the benefits of our oils for radiant skin and strong nails</h2>
+                            <h2>Discover the benefits of our oils for healthy skin and nails</h2>
                             <p>+ Health and Well-Being</p>
                             <p>+ Comfort and Confidence</p>
                             <p>Easy To Use</p>
@@ -56,7 +56,6 @@
             </section>
             <section class="sec_balloon">
                 <div class="div_balloon">
-                    <h2>Last Units</h2>
                     <h2>Claim Your Discount</h2>
                     <h2>of up to 50% <a href="https://thekerassentials.com/start/index.php?aff_id=1047659" target="_self">HERE!</a></h2>
                     <h2>and guarantee...</h2>
@@ -91,6 +90,8 @@
                 <div class="div_guarantee">
                     <h3 id="h3_guarantee">100% SATISFACTION <strong>60-DAYS MONEY BACK GUARANTEE</strong></h3>
                     <p>Your order today is covered by our iron-clad 60-day 100% money-back guarantee. If you are not impressed with the results, then just write to us and we’ll refund every single cent.</p>
+                    <br>
+                    <p>Take advantage today and guarantee your kerassentials, promotion valid while supplies last.</p>
                 </div>
             </section>
             <div class="button_find_out">
@@ -131,13 +132,13 @@
             <div class="div_footer_one">
                 <div class="div_footer_a">
                     <h4><a href="https://thekerassentials.com//help/contact-us.php" target="_blank">CONTACT</a></h4>
-                    <h4><a href="pages/terms.html" target="_self">TERMS OF USE</a></h4>
+                    <h4><a href="pages/terms.html" target="_self">TERMS</a></h4>
                     <h4><a href="/pages/disclaimer.html" target="_self">DISCLAIMER</a></h4>                      
                 </div>
                 <div class="div_footer_b">
-                    <h4><a href="pages/privacy.html" target="_self">PRIVACY POLICY</a></h4>
-                    <h4><a href="/pages/shipping.html" target="_self">SHIPPING POLICY</a></h4>
-                    <h4><a href="/pages/return_policy.html" target="_self">REFUND POLICY</a></h4>
+                    <h4><a href="pages/privacy.html" target="_self">PRIVACY</a></h4>
+                    <h4><a href="/pages/shipping.html" target="_self">SHIPPING</a></h4>
+                    <h4><a href="/pages/return_policy.html" target="_self">REFUND</a></h4>
                 </div>
             </div>
         </div>
